--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/aes-256": "^5.19.1",
+    "@ionic-native/camera": "^5.19.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/network": "^5.19.1",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -27,6 +28,7 @@
     "@ionic/angular": "^4.7.1",
     "cordova-android": "7.1.4",
     "cordova-plugin-aes256-encryption": "2.0.0",
+    "cordova-plugin-camera": "4.1.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
@@ -77,7 +79,10 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-aes256-encryption": {},
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android"
