--- a/package.json
+++ b/package.json
@@ -22,20 +22,22 @@
     "@ionic-native/aes-256": "^5.19.1",
     "@ionic-native/camera": "^5.19.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/email-composer": "^5.19.1",
     "@ionic-native/network": "^5.19.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-android": "7.1.4",
-    "cordova-plugin-aes256-encryption": "2.0.0",
-    "cordova-plugin-camera": "4.1.0",
-    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-aes256-encryption": "^2.0.0",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-email-composer": "0.9.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
-    "cordova-plugin-network-information": "2.0.2",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-network-information": "^2.0.2",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -81,6 +83,9 @@
       "cordova-plugin-aes256-encryption": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-email-composer": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       }
     },
